# cudanalyst

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  demo.py  pyproject.toml  readme.md
benchmark/: .gitignore  config.yaml  readme.md
benchmark/app/: readme.md
benchmark/app/xsbench/: eval.py
benchmark/cgo/: readme.md
benchmark/cgo/poly/: eval.py
benchmark/config/: openevolve_template.yml
benchmark/hpc/: readme.md
benchmark/hpc/npb/: .gitignore  eval.py
benchmark/hpc/poly/: eval.py
benchmark/llm/: readme.md
benchmark/llm/kbench/: eval.py  prompt.md
benchmark/llm/rkbench/: eval.py  prompt.md
benchmark/misc/nbody/: eval.py  pyanalyst.py
config/: .gitignore  cudanalyst_template.yml  cugedit_cfg_template.yml  keyset_template.yml  readme.md  top_cfg_template.yml
eval/: readme.md
eval/config/: .gitignore  openevolve_template.yml
eval/demo/: llm4ad_eoh.py  oe-npb.sh
eval/scripts/: openevolve.sh
src/cudanalyst/: result.py  workflow.py
src/cudanalyst/helper/: __init__.py  ckpt.py  draw.py  exec.py  stat.py  text.py
src/cudanalyst/module/: __init__.py  config.py  prompts.py
src/cudanalyst/pipeline/: analysis.py  config.py  intervene.py  replay.py
src/cudanalyst/toolkit/: analyzer.py  debugger.py
src/cugedit/: __init__.py  analyst.py  config.py  feedback.py  helper.py  pipeline.py  prompter.py  result.py  top.py  utils.py  workflow.py
src/cugedit/config/: constants.py  prompts.py
src/cugedit/helper/: __init__.py  ckpt.py  cuda.py  draw.py  stat.py  text.py
src/cugedit/module/: __init__.py  chat.py  module.py  prompts.py
src/cugedit/pipeline/: __init__.py  analysis.py  base.py  intervene.py  (+1 more)
(+215 files in other folders)
