[project]
name = "cudanalyst"
version = "0.1.0"
description = "Analysis layer for generation-level interventions in self-evolving LLM agents for CUDA kernel generation, enabling interpretable feedback-to-plan attribution."
readme = "readme.md"
authors = [{ name = "yuxuan-z", email = "yuxuan-z19@qq.com" }]
requires-python = ">=3.10"
dependencies = [
    "dacite>=1.9.2",
    "grakel",
    "networkx>=3.4.2",
    "nvidia-ml-py>=13.580.82",
    "openai>=2.11.0",
    "pydot>=4.0.1",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.2",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
    "tree-sitter-language-pack>=0.13.0",
    "xmltodict>=1.0.2",
]

[project.optional-dependencies]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "clang-format>=21.1.7",
    "isort>=7.0.0",
    "pre-commit>=4.5.0",
]

[tool.uv.sources]
grakel = { git = "https://github.com/yuxuan-z19/GraKeL.git", branch = "zyx-dev" }
